// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapDetailVestiging should render everything 1`] = `
<MapDetailResultWrapper
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Vestiging label"
  title="Vestiging"
>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      label="KvK-nummer"
      value="123456"
    />
    <MapDetailResultItem
      label="Vestigingsnummer"
      value="0001234"
    />
    <MapDetailAddressItem
      label="Bezoekadres"
      values={
        Object {
          "plaats": "Amsterdam",
        }
      }
    />
    <MapDetailVestigingActiviteitenItem
      activities={
        Array [
          Object {
            "sbiCode": "01",
            "sbiDescription": "SBI Description 1",
          },
          Object {
            "sbiCode": "02",
            "sbiDescription": "SBI Description 2",
          },
        ]
      }
    />
    <MapDetailResultItem
      label="Type vestiging"
      value="Hoofdvestiging"
    />
    <MapDetailVestigingBijzondereRechtstoestand
      values={
        Object {
          "status": "Bijzondere rechtstoestand",
        }
      }
    />
  </ul>
</MapDetailResultWrapper>
`;

exports[`MapDetailVestiging should render everything with hoofdvestiging = false 1`] = `
<MapDetailResultWrapper
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Vestiging label"
  title="Vestiging"
>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      label="KvK-nummer"
      value="123456"
    />
    <MapDetailResultItem
      label="Vestigingsnummer"
      value="0001234"
    />
    <MapDetailAddressItem
      label="Bezoekadres"
      values={
        Object {
          "plaats": "Amsterdam",
        }
      }
    />
    <MapDetailVestigingActiviteitenItem
      activities={
        Array [
          Object {
            "sbiCode": "01",
            "sbiDescription": "SBI Description 1",
          },
          Object {
            "sbiCode": "02",
            "sbiDescription": "SBI Description 2",
          },
        ]
      }
    />
    <MapDetailResultItem
      label="Type vestiging"
      value="Nevenvestiging"
    />
    <MapDetailVestigingBijzondereRechtstoestand
      values={
        Object {
          "status": "Bijzondere rechtstoestand",
        }
      }
    />
  </ul>
</MapDetailResultWrapper>
`;

exports[`MapDetailVestiging should render without label 1`] = `
<MapDetailResultWrapper
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle=""
  title="Vestiging"
>
  <Notification
    className=""
    level="info"
  >
    Medewerkers/ketenpartners van Gemeente Amsterdam kunnen inloggen om maatschappelijke activiteiten en vestigingen te bekijken.
  </Notification>
</MapDetailResultWrapper>
`;
